# foundry-docs

./: .dockerignore  .env.example  .gitignore  .mcp.json  .mintignore  ATTRIBUTION.md  Dockerfile  Dockerfile.http  Dockerfile.vnext  Dockerfile.vnext.http  README.md  docs.json  fastmcp.json  manifest.json  path_map.json  plan.md  post-sync-last-sha.txt  pyproject.toml  requirements.txt  sdk-versions.txt  skills-lock.json  upstream-docs-state.txt
.github/: agent-harness-map.md  copilot-instructions.md
.playwright-mcp/: catalog-models-response.json  catalog-publishers.json  catalog-sample-model.json  page-2026-04-08T17-06-44-675Z.yml  page-2026-04-08T17-07-08-247Z.yml  page-2026-04-08T17-07-19-306Z.yml  page-2026-04-08T17-07-26-263Z.yml  page-2026-04-08T18-56-54-643Z.yml  page-2026-04-08T19-07-09-669Z.yml  page-2026-04-08T19-18-31-146Z.yml  page-2026-04-08T19-19-50-629Z.yml  page-2026-04-08T19-20-32-768Z.yml  page-2026-04-08T19-38-48-428Z.yml  page-2026-04-08T19-39-33-528Z.yml  page-2026-04-09T02-09-24-333Z.yml  page-2026-04-09T03-40-28-293Z.yml  page-2026-04-09T04-01-02-754Z.yml
devvit-app/: README.md  REDDIT_PRO_BASELINE.md  devvit.json  package-lock.json  package.json
docs/: docs.json  style.css
docs-vnext/: README.md  RFC-navigation-reflow.md  docs.json  glossary.mdx  openapi-v1.json
foundry_docs_mcp/: __init__.py  _server_factory.py  chunker.py  foundry_client.py  indexer.py  retry.py  server.py  telemetry.py
foundry_docs_vnext_mcp/: server.py
research/: reverse-engineering-model-availability.md  reverse-engineering-model-catalog-api.md
scripts/: add_response_examples.py  build_navigation.py  build_testbench.py  check_mcp_discovery.py  check_model_catalog_watchdog.py  convert_to_mdx.py  download_docs.py  eval_report.py  eval_scorer.py  extract_manifest.py  generate_docs_vnext_diff_report.py  generate_model_availability.py  generate_sdk_samples.py  ingest_to_azure_search.py  ingest_vnext_to_azure_search.py  model_enrichment.json  prune_stale_docs.py  run_abcd_eval.py  (+5 more)
(+1390 files in other folders)
