[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foundry-docs-mcp"
version = "0.1.0"
description = "Microsoft Foundry documentation served via FastMCP server"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastmcp>=3.0.0rc1",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
scripts = [
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.scripts]
foundry-docs-mcp = "foundry_docs_mcp.server:main"

[tool.ruff]
line-length = 120
